Bug 1235858 - Record the time stamp, use it for crash reports. r=botond